force-app/main/default/objects/SLL_Group__c/SLL_Group__c.object-meta.xml
<CustomObject>
    <label>SLL Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLL Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>