force-app/main/default/objects/SLL_Group__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval - Active</fullName>
            </value>
            <value>
                <fullName>Approved - Active</fullName>
            </value>
            <value>
                <fullName>Rejected - Active</fullName>
            </value>
            <value>
                <fullName>Recalled - Active</fullName>
            </value>
            <value>
                <fullName>Pending Approval - Update</fullName>
            </value>
            <value>
                <fullName>Approved - Update</fullName>
            </value>
            <value>
                <fullName>Rejected - Update</fullName>
            </value>
            <value>
                <fullName>Recalled - Update</fullName>
            </value>
            <value>
                <fullName>Pending Approval - Inactive</fullName>
            </value>
            <value>
                <fullName>Approved - Inactive</fullName>
            </value>
            <value>
                <fullName>Rejected - Inactive</fullName>
            </value>
            <value>
                <fullName>Recalled - Inactive</fullName>
            </value>
            <value>
                <fullName>PAM Approver1 Approved - Active</fullName>
            </value>
            <value>
                <fullName>PAM Approver1 Approved - Update</fullName>
            </value>
            <value>
                <fullName>PAM Approver1 Approved - Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>