force-app/main/default/objects/SLL_Group__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SLL_Groups3</relationshipName>
    <type>Lookup</type>
</CustomField>