force-app/main/default/objects/SLL_Group__c/fields/PAM__c.field-meta.xml
<CustomField>
    <fullName>PAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>TMB RM Profile,TMB BDM Profile, TMB SE Zone Manager Profile</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SLL_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>