force-app/main/default/objects/SLL_Group__c/fields/PAM_To_Be__c.field-meta.xml
<CustomField>
    <fullName>PAM_To_Be__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Be PAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SLL_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>