force-app/main/default/objects/SLL_Group__c/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Existing_Customer, Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SLL Groups (Primary Customer)</relationshipLabel>
    <relationshipName>SLL_Groups1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>