force-app/main/default/objects/SLL_Group__c/fields/Primary_Customer_To_Be__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_To_Be__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Be Primary Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SLL Groups (Primary Customer To Be)</relationshipLabel>
    <relationshipName>SLL_Groups2</relationshipName>
    <type>Lookup</type>
</CustomField>