force-app/main/default/objects/SLL_Group__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>