force-app/main/default/objects/SLL_Group__c/fields/Remark_To_Be__c.field-meta.xml
<CustomField>
    <fullName>Remark_To_Be__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Be Remark</label>
    <type>TextArea</type>
</CustomField>