force-app/main/default/objects/SLL_Group__c/fields/Short_Regis_No__c.field-meta.xml
<CustomField>
    <fullName>Short_Regis_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Regis No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>