force-app/main/default/objects/SLL_Group__c/fields/SLL_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>SLL_Group_ID__c</fullName>
    <displayFormat>G-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>SLL Group ID</label>
    <type>AutoNumber</type>
</CustomField>