force-app/main/default/objects/SLL_Group__c/fields/SLL_Group_Name_To_Be__c.field-meta.xml
<CustomField>
    <fullName>SLL_Group_Name_To_Be__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Be SLL Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>