force-app/main/default/objects/SLL_Group__c/recordTypes/Draft.recordType-meta.xml
<RecordType>
    <fullName>Draft</fullName>
    <active>true</active>
    <label>Draft</label>
</RecordType>