force-app/main/default/objects/SLL_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SLL_Group_ID__c</columns>
    <columns>NAME</columns>
    <columns>Primary_Customer__c</columns>
    <columns>PAM__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>